--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,10 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# Environment
+.env
+
+# My files
+TODO.md
+pgdata
