--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "class-validator-cpf": "^1.1.1",
     "cpf-cnpj-validator": "^1.0.3",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
