--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.10",
+    "@prisma/client": "^5.3.1",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
